@@ -29,6 +29,9 @@ TODO:
 * JEP-0022/0085: Message events / chat states (composing, etc.)
 * Add a way to lock the buffer scrolling
 * "Offline roster" (when disconnected)
+* Maybe cache iq:version and show version in /info, if available
+* Sort roster by status
+* 2-levels roster display (jids, resources)
 
 * File transfer? :)
 
@@ -42,4 +45,5 @@ TODO:
   - /search <jid>|name
     (server search)
   - /help
+  - /roster enable|disable xml|status
 
