@@ -255,6 +255,9 @@ The roster command manipulates the roster/buddylist\&.  Here are the available p
  \fBhide_offline\fR	hide offline buddies
  \fBshow_offline\fR	show offline buddies
  \fBtoggle_offline\fR	toggle display of offline buddies
+ \fBhide\fR      	hide roster (full\-width chat window)
+ \fBshow\fR      	show roster
+ \fBtoggle\fR    	toggle roster visibility
  \fBsearch\fR bud	search for a buddy with a name or buddy containing "bud" (only in the displayed buddylist)
  \fBalternate\fR 	jump to alternate buddy\&. The "alternate" buddy is the last buddy left while being in chat mode (this command is thus especially useful after commands like "/roster unread_first")
  \fBunread_first\fR	jump to the first unread message
